# tautulli-epaper-display

./: .pre-commit-config.yaml  Dockerfile  crontab  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: pre-commit-validation.yml
src/: epd2in13_V3.py  epdconfig.py  plex_tautulli_client.py  tautulli_display.py
tests/: test_plex_tautulli_client.py
